[package]
name = "lib-q-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core types and traits for lib-Q post-quantum cryptography library"
keywords = ["cryptography", "post-quantum", "security", "core", "nist"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-types = { path = "../lib-q-types", default-features = false }
# Core cryptographic dependencies - no_std compatible
getrandom = { workspace = true, optional = true, default-features = false }
# rand_core 0.10 has no optional features; OS RNG comes from getrandom/rand when std is enabled
rand_core = { workspace = true, default-features = false }
rand = { workspace = true, default-features = false, features = ["thread_rng"], optional = true }

# Note: lib-q-core should not depend on implementation crates to avoid cyclic dependencies
# Implementation crates depend on lib-q-core, and the main lib-q crate provides concrete implementations

# Zeroize for secure memory clearing
zeroize = { workspace = true, features = ["derive"], default-features = false }

# Serde for serialization (optional)
serde = { workspace = true, optional = true, features = ["derive"], default-features = false }

# WASM bindings
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Once cell for global registry (std mode)
# Note: sync module requires std feature
once_cell = { version = "1.21.3", default-features = false, optional = true }
# Spin for no_std global registry
spin = { workspace = true, optional = true }

# `rand` 0.10 pulls `getrandom` without `wasm_js`; getrandom 0.4 requires that feature on
# wasm32-unknown-unknown (RUSTFLAGS `--cfg getrandom_backend=...` is not enough). A direct
# edge merges features so transitive `getrandom` builds for the JS backend.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, default-features = false, features = ["wasm_js"] }

[features]
default = ["std"]
std = ["getrandom", "alloc", "rand", "once_cell", "once_cell/std"]
alloc = []
no_std = ["spin"]
# Aborting #[panic_handler] for `cargo check` of this crate as `cdylib` in no_std (CI only).
no_std_panic_handler = []
# Random number generation - requires platform-specific configuration for no_std
# In no_std environments, applications must provide custom entropy sources
getrandom = ["dep:getrandom"]
rand = ["dep:rand"]

# Note: Feature flags for algorithm implementations are defined in the main lib-q crate
# lib-q-core only provides the foundational types and traits

# Hash function support (for conditional compilation)
hash = []

# Serialization features
serde = ["dep:serde", "lib-q-types/serde"]

# WASM support
wasm = [
    "wasm-bindgen",
    "js-sys",
    "serde",
    "serde-wasm-bindgen",
    "serde_json",
    "wasm_getrandom",
    "alloc",
    "lib-q-types/wasm",
]

# WASM-specific getrandom configuration
wasm_getrandom = ["getrandom", "getrandom/wasm_js"]

# Algorithm feature flags (for conditional compilation in WASM utils)
ml-kem = []
ml-dsa = []
fn-dsa = []
slh-dsa = []
saturnin = []

# Security validation features
relaxed_entropy_validation = []

[lib]
name = "lib_q_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt: LLVM may emit saturating float-to-int ops that older wasm-opt
# defaults reject without extra feature flags; matches lib-q-kem / root lib-q.
wasm-opt = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }

