[package]
name = "lib-q-dawn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "DAWN NTRU-based KEM for lib-Q"
keywords = ["cryptography", "post-quantum", "kem", "ntru", "dawn"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }

# Rand dependencies for key generation
rand = { version = "0.9.2", optional = true }
rand_core = { version = "0.9.3", optional = true }

# WASM bindings
wasm-bindgen = { version = "0.2.101", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["alloc", "std"]
std = ["alloc"]
alloc = []

# Enable WASM support
wasm = [
    "wasm-bindgen",
    "std",
    "lib-q-core/wasm",
]

[lib]
name = "lib_q_dawn"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
