[package]
name = "lib-q-dawn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "DAWN NTRU-based KEM for lib-Q"
keywords = ["cryptography", "post-quantum", "kem", "ntru", "dawn"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }
lib-q-sha3 = { path = "../lib-q-sha3" }
lib-q-k12 = { path = "../lib-q-k12" }

# Digest trait for hashing
digest = "0.11.0-rc.2"

# Rand dependencies for key generation
rand = { version = "0.9.2", optional = true }
rand_core = "0.9.3"

# Secure random number generation (no_std and WASM compatible)
getrandom = { version = "0.3.3", optional = true, default-features = false }

# Secure memory clearing
zeroize = { version = "1.8.1", features = ["derive"], default-features = false }

# Constant-time operations for side-channel resistance
subtle = { version = "2.6.1", default-features = false }

# WASM bindings
wasm-bindgen = { version = "0.2.104", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["alloc", "std", "getrandom"]
std = ["alloc", "getrandom"]
alloc = []

# Random number generation
getrandom = ["dep:getrandom"]

# Enable WASM support
wasm = [
    "wasm-bindgen",
    "std",
    "lib-q-core/wasm",
    "getrandom",
]

[lib]
name = "lib_q_dawn"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
