[package]
name = "lib-q-dawn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "DAWN NTRU-based KEM for lib-Q"
keywords = ["cryptography", "post-quantum", "kem", "ntru", "dawn"]
categories = ["cryptography", "wasm"]

[dependencies]
lib-q-core = { path = "../lib-q-core" }
lib-q-sha3 = { path = "../lib-q-sha3" }
lib-q-k12 = { path = "../lib-q-k12" }

# Digest trait for hashing
digest = { workspace = true }

# Random dependencies for key generation
lib-q-random = { path = "../lib-q-random", optional = true }
rand_core = { workspace = true }

# Secure memory clearing
zeroize = { workspace = true, features = ["derive"], default-features = false }

# Constant-time operations for side-channel resistance
subtle = { version = "2.6.1", default-features = false }

# WASM bindings
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", features = ["std"] }

[features]
default = ["alloc", "std", "random"]
std = ["alloc", "random"]
alloc = []

# Random number generation
random = ["dep:lib-q-random", "lib-q-random/std"]

# Enable WASM support
wasm = [
    "wasm-bindgen",
    "std",
    "lib-q-core/wasm",
    "random",
]

[lib]
name = "lib_q_dawn"
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
