[package]
name = "lib-q-double-kem"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "PROVISIONAL double ML-KEM-768 encapsulation profile with constrained wire budget"
keywords = ["cryptography", "post-quantum", "kem", "ml-kem", "no-std"]
categories = ["cryptography", "no-std"]

[dependencies]
lib-q-ml-kem = { path = "../lib-q-ml-kem", version = "0.0.5", default-features = false, features = ["deterministic"] }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.5", default-features = false, features = ["alloc"] }
lib-q-random = { path = "../lib-q-random", version = "0.0.5", optional = true, default-features = false, features = ["alloc"] }
zeroize = { workspace = true, default-features = false, features = ["derive"] }
subtle = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
lib-q-random = { path = "../lib-q-random", version = "0.0.5", features = ["std"] }

[features]
default = ["alloc", "std"]
alloc = ["lib-q-sha3/alloc"]
std = ["alloc", "lib-q-ml-kem/std", "lib-q-random/std"]
no_std = ["alloc"]
random = ["dep:lib-q-random", "lib-q-random/getrandom", "lib-q-random/secure", "lib-q-ml-kem/random"]

[lib]
name = "lib_q_double_kem"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("alloc", "std", "no_std", "random"))',
] }
