[package]
name = "lib-q-fn-dsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "FN-DSA (FIPS 206) post-quantum digital signature implementation"
keywords = ["cryptography", "post-quantum", "fn-dsa", "falcon", "signature"]
categories = ["cryptography"]

[lib]
name = "lib_q_fn_dsa"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Core libQ types
lib-q-core = { path = "../lib-q-core" }
lib-q-random = { path = "../lib-q-random", features = ["fn-dsa", "rand", "getrandom"] }

# FN-DSA implementation (the actual algorithm)
fn-dsa = { path = "fn-dsa" }

# Standard library features
rand_core = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"], optional = true }

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console"] }

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

# Security features
zeroize = ["dep:zeroize"]

# Performance features
no_avx2 = ["fn-dsa/no_avx2"]
shake256x4 = ["fn-dsa/shake256x4"]

# WASM support
wasm = ["lib-q-random/wasm", "wasm-bindgen", "js-sys", "web-sys"]

[dev-dependencies]
# Testing
criterion = { workspace = true }
proptest = { workspace = true }

# Test utilities
hex = { workspace = true }
rand = { workspace = true }

[[example]]
name = "fn_dsa_demo"
path = "examples/fn_dsa_demo.rs"

[[example]]
name = "wasm_example"
path = "examples/wasm_example.rs"

[[example]]
name = "no_std_example"
path = "examples/no_std_example.rs"
required-features = ["alloc"]

[[bench]]
name = "fn_dsa_bench"
harness = false
path = "benches/fn_dsa_bench.rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }